java8-fixes